--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
   ],
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "7.*"
+    "phpunit/phpunit": "8.*"
   },
   "require": {
-    "php": "^7.1",
-    "boxunsoft/php-instance": "v1.*",
-    "boxunphp/php-exception": "v1.*",
-    "boxunphp/php-mysql": "v1.*",
-    "boxunphp/php-cache": "v1.*",
-    "boxunphp/php-config": "v1.*"
+    "php": "^7.2",
+    "boxunphp/php-instance": "dev-master",
+    "boxunphp/php-exception": "dev-master",
+    "boxunphp/php-mysql": "dev-master",
+    "boxunphp/php-cache": "dev-master",
+    "boxunphp/php-config": "dev-master"
   },
   "autoload": {
     "psr-4": {
